# science-installers

./: README.md
.github/workflows/: python-ci.yml  python-release.yml
python/: .gitignore  CHANGES.md  README.md  RELEASE.md  pyproject.toml
python/inst_science/: __main__.py  shim.py
python/insta_science/: __init__.py
python/scripts/: ci.py  release.py
python/test-support/testing/: __init__.py
python/tests/: conftest.py
