[build-system]
requires = ["setuptools"]
backend = "setuptools.build_meta"

[project]
name = "inst-science"
authors = [
    {name = "John Sirois", email = "john.sirois@gmail.com"},
]
description = "A tool to help with installing and using science in Python projects."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "appdirs",
    "filelock",
    "httpx",
    "packaging",
    "tomlkit",
    "tqdm"
]
dynamic = ["version"]

[project.scripts]
inst-science = "inst_science.shim:science"
inst-science-util = "inst_science.util:main"

[tool.setuptools.dynamic]
version = {attr = "inst_science.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["inst_science*"]

[dependency-groups]
dev = [
    "dev-cmd",
    "mypy",
    "pytest",
    "pytest-xdist",
    "ruff",
    "types-tqdm",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.dev-cmd.commands]
fmt = ["ruff", "format"]
check-fmt = ["ruff", "format", "--diff"]

lint = ["ruff", "check", "--fix"]
check-lint = ["ruff", "check"]

type-check = ["mypy", "inst_science"]

[tool.dev-cmd.commands.test]
args = ["pytest", "-n", "auto"]
accepts-extra-args = true

[tool.dev-cmd.aliases]
checks = ["fmt", "lint", "type-check", "test"]
ci = ["check-fmt", "check-lint", "type-check", "test"]

[tool.dev-cmd.default]
alias = "checks"
